--- a/appointment.html
+++ b/appointment.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Book Appointment</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js" defer></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #007acc;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background-color: white;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    form input, form button {
+      display: block;
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 0.8rem;
+      font-size: 1rem;
+    }
+
+    form button {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    form button:hover {
+      background-color: #005fa3;
+    }
+
+    .success-message {
+      text-align: center;
+      display: none;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.8rem 1.5rem;
+      background-color: #007acc;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+
+    .btn:hover {
+      background-color: #005fa3;
+    }
+
+    .details {
+      text-align: left;
+      margin-top: 1rem;
+    }
+
+    .details p {
+      margin: 0.5rem 0;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -17,14 +92,62 @@
   </header>
 
   <div class="container">
-    <form onsubmit="event.preventDefault(); saveFormData('Appointment');">
-      <input type="text" id="name" placeholder="Full Name" required>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="tel" id="phone" placeholder="Phone Number" required>
-      <input type="date" id="date" required>
-      <input type="time" id="time" required>
+    <!-- Appointment Form -->
+    <form id="appointmentForm">
+      <input type="text" id="name" placeholder="Full Name" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="date" id="date" required />
+      <input type="time" id="time" required />
       <button type="submit">Submit</button>
     </form>
+
+    <!-- Success Message -->
+    <div class="success-message" id="successMessage">
+      <h2>Appointment Booked Successfully!</h2>
+      <p>Thank you. We have received your appointment details.</p>
+
+      <div class="details" id="appointmentDetails">
+        <!-- Appointment details will be inserted here -->
+      </div>
+
+      <a href="index.html" class="btn">Back to Home</a>
+    </div>
   </div>
+
+  <script>
+    document.getElementById('appointmentForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      // Get form values
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const phone = document.getElementById("phone").value;
+      const date = document.getElementById("date").value;
+      const time = document.getElementById("time").value;
+
+      const appointmentData = { name, email, phone, date, time };
+
+      // Optional: Save to localStorage
+      localStorage.setItem("appointment", JSON.stringify(appointmentData));
+
+      // Hide the form
+      document.getElementById('appointmentForm').style.display = 'none';
+
+      // Show the success message
+      const successMessage = document.getElementById('successMessage');
+      successMessage.style.display = 'block';
+
+      // Fill in the appointment details
+      const detailsDiv = document.getElementById('appointmentDetails');
+      detailsDiv.innerHTML = `
+        <p><strong>Name:</strong> ${name}</p>
+        <p><strong>Email:</strong> ${email}</p>
+        <p><strong>Phone:</strong> ${phone}</p>
+        <p><strong>Date:</strong> ${date}</p>
+        <p><strong>Time:</strong> ${time}</p>
+      `;
+    });
+  </script>
 </body>
 </html>
