--- a/success.html
+++ b/success.html
@@ -1,12 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Success</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js" defer></script>
+
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f7f9;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background-color: #28a745;
+      color: white;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .container {
+      flex: 1;
+      max-width: 600px;
+      margin: 3rem auto;
+      background-color: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    h2 {
+      color: #28a745;
+      margin-bottom: 1rem;
+    }
+
+    .details {
+      text-align: left;
+      margin-top: 1rem;
+      font-size: 1rem;
+    }
+
+    .details p {
+      margin: 0.5rem 0;
+    }
+
+    button {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      margin: 1rem 0.5rem 0 0.5rem;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    @media print {
+      nav,
+      button {
+        display: none !important;
+      }
+
+      .container {
+        box-shadow: none;
+        border: none;
+      }
+
+      body {
+        background-color: white;
+      }
+    }
+  </style>
+
+  <script>
+    function showSuccessDetails() {
+      const msgElement = document.getElementById("success-msg");
+      const container = document.querySelector(".container");
+
+      // Get appointment data from localStorage
+      const appointmentData = JSON.parse(localStorage.getItem("appointment"));
+
+      if (appointmentData) {
+        msgElement.textContent = "Appointment Booked Successfully!";
+
+        const details = `
+          <div class="details">
+            <p><strong>Name:</strong> ${appointmentData.name}</p>
+            <p><strong>Email:</strong> ${appointmentData.email}</p>
+            <p><strong>Phone:</strong> ${appointmentData.phone}</p>
+            <p><strong>Date:</strong> ${appointmentData.date}</p>
+            <p><strong>Time:</strong> ${appointmentData.time}</p>
+          </div>
+        `;
+
+        msgElement.insertAdjacentHTML("afterend", details);
+      } else {
+        msgElement.textContent = "No appointment data found.";
+      }
+    }
+  </script>
 </head>
+
 <body onload="showSuccessDetails()">
   <header>
     <h1>Submission Successful</h1>
@@ -18,6 +138,7 @@
 
   <div class="container">
     <h2 id="success-msg">Loading...</h2>
+    <button onclick="window.print()">Print Confirmation</button>
     <button onclick="location.href='index.html'">Back to Home</button>
   </div>
 </body>
